--- a/WebAPI/Properties/launchSettings.json
+++ b/WebAPI/Properties/launchSettings.json
@@ -18,7 +18,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7036;http://localhost:5153"
+      //"applicationUrl": "https://localhost:7036;http://localhost:5153"
+      "applicationUrl": "https://localhost:6001"
     },
     "IIS Express": {
       "commandName": "IISExpress",
